ajustes de usuarios, rutas y controladores
