# src/models/User.js
@@ -8,12 +8,27 @@ const userSchema = new mongoose.Schema(
         unique: true,
         trim: true
     },
-
+    email: {
+        type: String,
+        required: true,
+        unique: true,
+        trim: true
+    },
+    password: {
+        type: String,
+        required: true
+    },
+    isVerified: {
+        type: Boolean,
+        default: false
+    },
+    verificationToken: {
+        type: String
+    },
     followers: [{
         type: mongoose.Schema.Types.ObjectId,
         ref: "User"
     }],
-
     following: [{
         type: mongoose.Schema.Types.ObjectId,
         ref: "User"
